objects/SC_AssociatedContract__c.object
<CustomObject>
    <description>Junction Object to associate Cases with the Financial Accounts &amp; Insurance Policies.</description>
    <fields>
        <fullName>SC_AssociatedContractExtension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Contract Lookup field</description>
        <label>Associated Contract Extension</label>
        <referenceTo>SC_AssociatedContractExtension__c</referenceTo>
        <relationshipLabel>Associated Contracts</relationshipLabel>
        <relationshipName>Associated_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Case__c</fullName>
        <description>Contains the servicing case number associated to a particular contract.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Associated_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SC_CommencementDate__c</fullName>
        <description>Contains the commencement date of the contract associated to a a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null,  SC_InsurancePolicy__r.AW_CommencementDate__c, IF(SC_FinancialAccount__c &lt;&gt; null &amp;&amp; SC_InsurancePolicy__c = null,  SC_FinancialAccount__r.FinServ__OpenDate__c, null) )</formula>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SC_FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the financial accounts associated to a particular servicing case.</description>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Associated Contracts</relationshipLabel>
        <relationshipName>Associated_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_InsurancePolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the insurance policies associated to a particular servicing case.</description>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Associated Contracts</relationshipLabel>
        <relationshipName>Associated_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_PolicyIntermediatedStatus__c</fullName>
        <description>Indicates whether the Policy is Intermediated or orphan.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null, SC_InsurancePolicy__r.SC_ConsultantStatus__c, 
IF(SC_FinancialAccount__c &lt;&gt; null &amp;&amp;SC_InsurancePolicy__c = null, 
 SC_FinancialAccount__r.SC_ConsultantStatus__c, &apos;&apos;) )</formula>
        <label>Policy Intermediated Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PolicyNumber__c</fullName>
        <description>Contains the policy number  associated to a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null, SC_InsurancePolicy__r.Name,  IF( SC_FinancialAccount__c  &lt;&gt; null &amp;&amp; SC_InsurancePolicy__c = null,   SC_FinancialAccount__r.FinServ__FinancialAccountNumber__c, &apos;&apos;) )</formula>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PolicyType__c</fullName>
        <description>Contains the policy type  of the policy associated to a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null, &apos;Risk Product&apos;, IF( SC_FinancialAccount__c &lt;&gt; null &amp;&amp; SC_InsurancePolicy__c = null, &apos;Investment Product&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Premium__c</fullName>
        <description>Contains the premium of the policy associated to a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null,  SC_InsurancePolicy__r.PremiumAmount, IF(SC_FinancialAccount__c &lt;&gt; null &amp;&amp;SC_InsurancePolicy__c = null,  SC_FinancialAccount__r.FinServ__Premium__c, 0.00) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SC_ProductType__c</fullName>
        <description>Contains the product type of the policy associated to a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null  &amp;&amp; SC_FinancialAccount__c = null,   TEXT(SC_InsurancePolicy__r.PolicyType), IF( SC_FinancialAccount__c &lt;&gt; null &amp;&amp; SC_InsurancePolicy__c = null,  TEXT(SC_FinancialAccount__r.FinServ__FinancialAccountType__c), &apos;&apos;) )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Status__c</fullName>
        <description>Contains the status of the policy associated to a particular servicing case.</description>
        <formula>IF(SC_InsurancePolicy__c &lt;&gt; null &amp;&amp; SC_FinancialAccount__c = null, TEXT(SC_InsurancePolicy__r.Status), IF(SC_FinancialAccount__c &lt;&gt; null &amp;&amp;SC_InsurancePolicy__c = null, TEXT( SC_FinancialAccount__r.FinServ__Status__c), &apos;&apos;) )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Associated Contract</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Associated Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>